# EarthSolver-GUI

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
exemplos/: cond.json  eletrodo_malha.json  layers.json  malha.dxf  projeto.json  solo.json  solo_uniforme.json  solo_wenner.csv
gui/: __init__.py  campos.py  componentes.py  estado.py  graficos.py  layout.py  main.py  recursos.py  solver.py  sondagem.py
gui/paginas/: __init__.py  calculo.py  estratificacao.py  inicio.py  malha.py  visualizador.py
tests/: conftest.py  test_campos.py  test_estado.py  test_estratificacao.py  test_graficos.py  test_integracao.py  test_paginas.py  test_solver.py
